--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,7 @@
     />
     <title>Contact us</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="test.js" type="module" defer></script>
-    <script src="script.js" type="module" defer></script>
+    <script src="contact.js" type="module" defer></script>
   </head>
   <body>
     <div>
@@ -45,7 +44,6 @@
         <textarea id="subject" name="subject" rows="5"></textarea>
 
         <button type="submit">Send</button>
-       
       </form>
     </div>
   </body>
