--- a/details.html
+++ b/details.html
@@ -11,8 +11,8 @@
     <title>Joke randomizer</title>
     <link rel="stylesheet" href="style.css" />
     <script src="apicall.js" type="module" defer></script>
-    <script src="script.js" type="module" defer></script>
-    <script src="GetJoke.js" type="module" defer></script>
+    <script src="detailsJokeButton.js" type="module" defer></script>
+    
   </head>
   <body>
     <div>
