--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>A website for random jokes</title>
     <link rel="stylesheet" href="style.css" />
 
-    <script src="egen.js" type="module" defer></script>
+    <script src="Home.js" type="module" defer></script>
   </head>
   <body>
     <div>
@@ -35,5 +35,6 @@
     </div>
     <p id="show joke"></p>
     <div id="joke-many"></div>
+    
   </body>
 </html>
